--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <title>
-        My First Web Page
+        My Second Web Page
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -16,7 +19,7 @@
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
     <h1>
         About Jovian
-    </h1>
+    </h1> 
 
     <div id="about">
         <div id="description">
@@ -55,21 +58,45 @@
     
     <h2>Job Opportunities</h2>
     <div id="jobs">
-        <div>
-            <a href="mailto:support@jovian.com?subject=Frontend" class="apply" target="_blank">Apply</a>
-            <h3 class="job-role">Frontend Developer</h3>
-            <div class="location">Bengaluru, India</div>
-        </div>
-        <div>
-            <a href="mailto:support@jovian.com?subject=Backend" class="apply" target="_blank">Apply</a>
-            <h3  class="job-role">Backend Developer</h3>
-            <div class="location">Remote</div>
-        </div>
-        <div>
-            <a href="mailto:support@jovian.com?subject=Data" class="apply" target="_blank">Apply</a>
-            <h3  class="job-role">Data Scientist</h3>
-            <div class="location">Mumbai, India</div>
-        </div>
+        <table  id="Jobs-table">
+            <tr class="Jobs-header-row">
+                <TH rowspan="2">Job Title</TH>
+                <TH colspan="2">Location</TH>
+                <th rowspan="2">Salary</th>
+                <th rowspan="2">Posted On</th>
+            </tr>
+            <tr class="Jobs-header-row">
+                <th>City</th>
+                <th>Country</th>
+            </tr>
+            <tr class="Jobs-data-row">
+                <td>Frontend Developer</td>
+                <td>Bengaluru</td>
+                <td>India</td>
+                <td>₹12,00,000</td>
+                <td>Mar 3, 2023</td>
+            </tr>
+            <tr class="Jobs-data-row">
+                <td>Full Stack Developer</td>
+                <td>New Delhi</td>
+                <td>India</td>
+                <td>₹15,00,000</td>
+                <td>Feb 1, 2023</td>
+            </tr>
+            <tr class="Jobs-data-row">
+                <td>Data Scientist</td>
+                <td>San Francisco</td>
+                <td>USA</td>
+                <td>$175,000</td>
+                <td>Dec 22, 2022</td>
+            </tr>
+            <tr class="Jobs-data-row">
+                <td>Machine Learning Engineer</td>
+                <td colspan="2">Remote</td>
+                <td>$80,000</td>
+                <td>Sep 19, 2022</td>
+            </tr>
+        </table>
     </div>
 
     
