--- a/index.html
+++ b/index.html
@@ -104,7 +104,10 @@
     <div id="application">
         <h2>Submit Your Application</h2>
 
-        <form id="application-form">
+        <form id="application-form"
+        action="https://formbold.com/s/3GK0x"
+        method="POST"
+        enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">Full Name</label><br>
                 <input type="text" id="name" name="Full Name" required placeholder="Jovian Name">
@@ -116,13 +119,13 @@
             </div>
 
             <div class="form-group">
-                <label for="phone">Phone</label><br>
-                <input type="tel" id="phone" name="phone" required placeholder="+91999999999">
+                <label for="Phone">Phone</label><br>
+                <input type="tel" id="phone" name="Phone" required placeholder="+91999999999">
             </div>
 
             <div class="form-group">
                 <label for="dob">Date of Birth</label><br>
-                <input type="date" id="dob" name="dob" required>
+                <input type="date" id="dob" name="DOB" required>
             </div>
 
             <div class="form-group">
@@ -138,18 +141,18 @@
 
             <div class="form-group">
                 <label for="resume">Upload Resume</label><br>
-                <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx" required>
+                <input type="file" id="resume" name="Resume" accept=".pdf,.doc,.docx" required>
             </div>
 
             <div class="form-group">
                 <label for="coverletter">Cover Letter</label><br>
-                <textarea id="coverletter" name="coverletter" rows="2"
+                <textarea id="coverletter" name="CoverLetter" rows="2"
                     placeholder="Explain what makes you suitable for the job.."></textarea>
             </div>
 
             <div class="form-group">
                 <label for="terms">
-                    <input type="checkbox" id="terms" name="terms" required>
+                    <input type="checkbox" id="terms" name="Terms" required>
                     I agree to the terms and conditions
                 </label>
             </div>
